re PR tree-optimization/26179 (ICE while compiling mozilla in tree-ssa-pre.c)

2006-02-09  Andrew Pinski  <pinskia@physics.uc.edu>

        PR tree-opt/26179
        * g++.dg/opt/pr26179.C: New test.
2006-02-09  Andrew Pinski  <pinskia@physics.uc.edu>

        PR tree-opt/26179
        * tree-ssa-pre.c (create_component_ref_by_pieces):
        Handle RETURN_DECL like VAR_DECL.

From-SVN: r110801